# notes2

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
config/: Cargo.toml
config/src/: lib.rs  watch.rs
core/: Cargo.toml
core/src/: events.rs  lib.rs  state.rs
elephant_notes/: Cargo.toml
elephant_notes/config/: Cargo.toml
elephant_notes/config/src/: lib.rs
elephant_notes/core/src/: lib.rs
elephant_notes/interactive_widgets/src/: lib.rs
elephant_notes/markdown_renderer/: Cargo.toml
elephant_notes/markdown_renderer/src/: lib.rs
elephant_notes/notes/settings/: theme.md
elephant_notes/storage/: Cargo.toml
elephant_notes/storage/src/: lib.rs
elephant_notes/tools/create_note/: Cargo.toml
elephant_notes/tools/create_note/src/: main.rs
elephant_notes/ui_iced/: Cargo.toml
elephant_notes/ui_iced/src/: main.rs
elephant_notes/ui_tui/: Cargo.toml
elephant_notes/ui_tui/src/: main.rs
interactive_widgets/: Cargo.toml
launcher/: Cargo.toml
launcher/src/: main.rs
markdown_renderer/: Cargo.toml
markdown_renderer/src/: lib.rs
src/: lib.rs  main.rs
storage/: Cargo.toml
storage/src/: fs_tree.rs  lib.rs
tests/: cli.rs  pixel_icons.rs  sccache_config.rs
tools/: pre_commit.sh  prepare_build.sh
tools/create_note/: Cargo.toml
tools/create_note/src/: main.rs
tui_editor/: Cargo.toml
tui_editor/src/: file_explorer.rs  lib.rs  main.rs  sidebar.rs
ui_iced/: Cargo.toml
ui_iced/src/: editor.rs  lib.rs  main.rs  sidebar.rs
