[package]
name = "notes2"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
[workspace]
members = [
    "tools/create_note",
]
resolver = "2"
members = ["markdown_renderer"]
members = [
    "core",
    "config",
    "markdown_renderer",
    "interactive_widgets",
    "storage",
    "ui_iced",
    "tui_editor",
    "tools/create_note",
    "launcher"
]

[workspace.dependencies]
tokio = "1"
serde = { version = "1", features = ["derive"] }
iced = "0.10"
tui = "0.19"
pulldown-cmark = "0.10"
