[package]
name = "notes2"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "notes2-cli"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tui_editor = { path = "tui_editor" }
[workspace]
resolver = "2"
members = [
    "core",
    "config",
    "markdown_renderer",
    "interactive_widgets",
    "storage",
    "ui_iced",
    "tui_editor",
    "tools/create_note",
    "launcher"
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
iced = "0.10"
tui = "0.19"
pulldown-cmark = "0.10"
